--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="row name-title-company">
 				<div class="col is-6">
 					<p class="text-name">Andrés Montoya</p>
-					<p class="text-title-company">Jefe de Ventasr</p>
+					<p class="text-title-company">Jefe de Ventas</p>
 					<p class="text-title-company">Fresenius Kabi Colombia</p>
 				</div>
 				<div class="col">
@@ -44,7 +44,7 @@
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">andres.montoya@fresenius-kabi.comg</p>
+						<p class="text-detail">andres.montoya@fresenius-kabi.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -80,7 +80,7 @@
 						<img src="assets/icon-website.svg" alt="Website Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">www.fresenius-kabi.com</p>
+						<p class="text-detail">www.fresenius-kabi.com/co</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
