--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="Stiwar Llanos.jfif" alt="Profile Picture">
+					<img class="profile-pic" src="Billy Espitia.jfif" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -25,8 +25,8 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Stiwar Llanos</p>
-					<p class="text-title-company">Representante de Promoción y Ventas</p>
+					<p class="text-name">Billy Jack Espitia</p>
+					<p class="text-title-company">Representante de Promoción Médica</p>
 					<p class="text-title-company">Fresenius Kabi Colombia</p>
 				</div>
 				<div class="col">
@@ -37,14 +37,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:stiwar.llanos@fresenius-kabi.com">
+		<a href="mailto:billy.espitia@fresenius-kabi.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">stiwar.llanos@fresenius-kabi.com</p>
+						<p class="text-detail">billy.espitia@fresenius-kabi.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -55,14 +55,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="tel:+573164417548">
+		<a href="tel:+573187178028">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-phone.svg" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">(+57) 3164417548</p>
+						<p class="text-detail">(+57) 3187178028</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
