--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="Liliam Estrada.jfif" alt="Profile Picture">
+					<img class="profile-pic" src="Catalina Gonzalez.jfif" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -25,7 +25,7 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Liliam Estrada</p>
+					<p class="text-name">Catalina González</p>
 					<p class="text-title-company">Representante de Promoción Médica</p>
 					<p class="text-title-company">Fresenius Kabi Colombia</p>
 				</div>
@@ -37,14 +37,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:liliam.estrada@fresenius-kabi.com">
+		<a href="mailto:catalina.gonzalez@fresenius-kabi.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">liliam.estrada@fresenius-kabi.com</p>
+						<p class="text-detail">catalina.gonzalez@fresenius-kabi.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -55,14 +55,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="tel:+573168684007">
+		<a href="tel:+573168742253">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-phone.svg" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">(+57) 3168684007</p>
+						<p class="text-detail">(+57) 3168742253</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
