--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="Ramiro Rueda.jfif" alt="Profile Picture">
+					<img class="profile-pic" src="Paola Arrazola.jfif" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -25,8 +25,8 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Ramiro José Rueda</p>
-					<p class="text-title-company">Representante de Ventas</p>
+					<p class="text-name">Paola Andrea Arrázola</p>
+					<p class="text-title-company">Representante de Promoción Médica</p>
 					<p class="text-title-company">Fresenius Kabi Colombia</p>
 				</div>
 				<div class="col">
@@ -37,14 +37,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:ramiro.ruedan@fresenius-kabi.com">
+		<a href="mailto:paola.arrazola@fresenius-kabi.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">ramiro.rueda@fresenius-kabi.com</p>
+						<p class="text-detail">paola.arrazola@fresenius-kabi.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -55,14 +55,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="tel:+573152416753">
+		<a href="tel:+573168789797">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-phone.svg" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">(+57) 3152416753</p>
+						<p class="text-detail">(+57) 3168789797</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
