--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Kaira del Carmen Álvarez</p>
+					<p class="text-name">Kaira Álvarez</p>
 					<p class="text-title-company">Representante de Promoción Médica</p>
 					<p class="text-title-company">Fresenius Kabi Colombia</p>
 				</div>
