--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="AlixGomez.jfif" alt="Profile Picture">
+					<img class="profile-pic" src="AlixG.png" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
