--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="Alix Gómez.jpg" alt="Profile Picture">
+					<img class="profile-pic" src="Mugued Triana.JPG" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -25,8 +25,8 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Alix Gómez Carreño</p>
-					<p class="text-title-company">Representante de Ventas</p>
+					<p class="text-name">Mugued Triana</p>
+					<p class="text-title-company">Subgerente Admon. de ventas y Servicio al cliente</p>
 					<p class="text-title-company">Fresenius Kabi Colombia</p>
 				</div>
 				<div class="col">
@@ -37,14 +37,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:alix.gomez@fresenius-kabi.com">
+		<a href="mailto:mugued.triana@fresenius-kabi.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">alix.gomez@fresenius-kabi.com</p>
+						<p class="text-detail">mugued.triana@fresenius-kabi.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -55,14 +55,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="tel:+573183059259">
+		<a href="tel:+573188481550">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-phone.svg" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">(+57) 318 3059259</p>
+						<p class="text-detail">(+57) 3188481550</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
